@@ -3,6 +3,7 @@ Revision history for Perl extension DTL::Fast.
 1.612 - in development
     - Fixed timeuntil test race condition, thanks to @eserte, fixes #59
     - Implemented dynamic inheritance. You may now extend with context, fixes #9
+    - Redundant serialized cache removed from templating system. Only runtime and custom now.
 
 1.611 - Sun 15 Feb 2015 11:44 MSK
     - stringformat now treats undef values as empty strings
